examples/test/testpolicy11337.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11337
  namespace: namespace41
spec:
  podSelector:
    matchLabels:
      key9: value22
      key5: value19
      key3: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value23
          key12: value11
      podSelector:
        matchLabels:
          key42: value15
